NO-JIRA fixed an issue where project filters had unnecessary scrollbar on firefox

--- a/server/sonar-web/src/main/js/apps/projects/styles.css
+++ b/server/sonar-web/src/main/js/apps/projects/styles.css
@@ -190,3 +190,12 @@
   ~ .search-navigator-facet-worse-than-highlight {
   background-color: #a1cde8;
 }
+
+.project-filters-list {
+  /*
+   * On Firefox on Windows, the scrollbar hides the sidebar's content.
+   * Using 'scrollbar-gutter:stable' is a workaround to ensure consistency with other browsers.
+   * @see https://bugzilla.mozilla.org/show_bug.cgi?id=764076
+   */
+  scrollbar-gutter: stable;
+}
